[package]
name = "Thermite_Versatile_Scripting_Language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
codemap = "0.1.3"
error-chain = "0.12.4"
errors = "0.0.0"
nom = "7"
pretty_assertions = "1.4.0"
serde = "1.0.192"
serde_derive = "1.0.192"
